--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^3.6.0",
     "vue-eslint-parser": "^9.1.0",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.9",
+    "echarts": "^5.1.2",
+    "vue-echarts": "^v6.2.3"
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
