--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.20",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
@@ -31,6 +33,7 @@
     "pinia": "^2.0.23",
     "screenfull": "^6.0.2",
     "vue": "^3.2.41",
+    "vue-echarts": "^6.5.1",
     "vue-router": "^4.1.6",
     "vxe-table": "^4.3.5",
     "vxe-table-plugin-element": "^3.0.6",
