--- a/.env.production
+++ b/.env.production
@@ -4,10 +4,10 @@ NODE_ENV = production
 # 下面是自定义的环境变量，可以修改（命名必须以 VITE_ 开头）
 
 ## 后端接口公共路径（如果解决跨域问题采用 CORS 就需要写全路径）
-VITE_BASE_API = 'https://pt.musepedia.cn/api'
+VITE_BASE_API = 'https://admin.musepedia.cn/api'
 
 ## 路由模式 hash 或 html5
 VITE_ROUTER_HISTORY = 'hash'
 
 ## 打包路径（就是网站前缀，例如部署到 https://un-pany.github.io/v3-admin-vite/ 域名下，就需要填写 /v3-admin-vite/）
-VITE_PUBLIC_PATH = '/MGS/'
+VITE_PUBLIC_PATH = '/'
