--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.23",
+    "qs": "^6.11.1",
     "screenfull": "^6.0.2",
     "vue": "^3.2.41",
     "vue-echarts": "^6.5.1",
@@ -46,6 +47,7 @@
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-vue": "^3.2.0",
